//
// Created by EgrZver on 05.10.2023.
//

#ifndef CLCHECKERS2_DIFFICULTY_H
#define CLCHECKERS2_DIFFICULTY_H

namespace CLCEngine {
    enum class Difficulty {
            Human = 0,
            Dumbass = 2,
            Easy,
            Normal,
            Hard,
            Insane = 7,
            Extreme = 9
    };
}

#endif //CLCHECKERS2_DIFFICULTY_H
